--- a/sidebar/viewer.css
+++ b/sidebar/viewer.css
@@ -73,6 +73,7 @@ body{
 	vertical-align: top;
 	width: 100%;
 	padding-left: 15px;
+	padding-bottom: 5px;
 	margin-right: 5px;
 	display: inline-block;
 }
@@ -95,8 +96,8 @@ body{
 	padding-top : 0px;
 	padding-left: 5px;
 }
-.entry-note-container > p{
-	vertical-align : top;
+.entry-note-container:hover{
+	cursor: pointer;
 }
 .entry-options > img{
 	width: 13px !important;
