--- a/resources/menu.css
+++ b/resources/menu.css
@@ -13,21 +13,20 @@
      width: 25px;
      display: inline-block;
      margin: 0 auto;
-     align: center;
    }
    #notes-container {
-     width :140px;
+     width :100%;
      height: 100px;
-     display: none;
+     text-align: center;
+     padding-bottom: 5px;
    }
    #note{
-     width: 90%;
-     align: center;
-     height: 90%;
+     width: 100%;
+     height: 100%;
    }
    #color-selector{
-     margin: 0 auto;
-     height: 40px;
+     margin-bottom: 5px;
+     height: 35px;
      width: 100%;
      text-align: center;
  
@@ -50,20 +49,18 @@
    }
 
 
-.hidden {
+.hidden-view, .hidden {
 				display : none;
 }
-.topic-view  
-{
-				width: 100%;
-}
-#selectTopic {
+
+.selectTopic, .exit-topic-view {
    background-color: #4CAF50;
    color: white;
-   padding: 16px;
-   font-size: 16px;
+   font-size: 13px;
    border: none;
 	 width : 100%;
+   height: 20px;
+   text-align: center;
  }
 
 
@@ -75,12 +72,19 @@
  }
 
 .topic {
-   background-color: #f1f1f1;
+   background-color: white;
    width: 100%;
+   border: none;
 
  }
 
  .topic:hover {background-color: #ddd;}
- #selectTopic:hover {background-color: #3e8e41;}
+ .selectTopic:hover, .exit-topic-view:hover {background-color: #3e8e41;}
 
+.default-view-container, .topic-view-container{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  width : 100%;
+}
 
