--- a/resources/menu.css
+++ b/resources/menu.css
@@ -23,6 +23,8 @@
    #note{
      width: 100%;
      height: 100%;
+     resize: none;
+     margin-right:2px;
    }
    #color-selector{
      margin-bottom: 5px;
