--- a/sidebar/viewer.css
+++ b/sidebar/viewer.css
@@ -24,15 +24,17 @@
 }
 
 /* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
+.dropdown-item, .option-add-topic {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
+.dropdown-item{
+  color: black;
+}
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-item:hover {background-color: #ddd;}
 
 
 /* Show the dropdown menu on hover */
@@ -40,6 +42,15 @@
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {background-color: #3e8e41;} 
+
+
+.option-add-topic {
+	background-color: #ff6600;	
+	color: white;
+}
+
+
+.option-add-topic:hover { background-color: #ff3300;}
 
 
 body{
