--- a/resources/menu.css
+++ b/resources/menu.css
@@ -63,6 +63,7 @@
 	 width : 100%;
    height: 20px;
    text-align: center;
+   text-overflow: ellipsis;
  }
 
 
@@ -77,6 +78,8 @@
    background-color: white;
    width: 100%;
    border: none;
+   text-overflow: ellipsis;
+   border-bottom: solid black 1px;
 
  }
 
