--- a/sidebar/viewer.css
+++ b/sidebar/viewer.css
@@ -1,5 +1,53 @@
 .header{
 	border-bottom: solid grey 5px;
+	position:sticky;
+	top:0;
+	z-index: 2;
+	background-color: #292929 ;
+}
+.filters {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	height: 25px;
+	margin-top: 5px;
+}
+.display-order{
+	width : 20px;
+}
+.display-order > img {
+	width : 100%;
+}
+.highlight-color {
+	width : 20px;
+	height : 20px;
+	background-color: white;
+}
+.selected-color{
+	float: left;
+}
+.color-filter-container{
+	width:40px;
+	text-align:center;
+	height:25px;
+	border-right : 2px solid grey;
+}
+
+.menu-arrow{
+	width: 10px;
+	float: left;
+	top: 0 px;
+}
+
+.filters>div {
+	margin-right : 5px;
+	margin-left : 5px;
+}
+
+#hl-count {
+	color: white;
+	position: absolute;
+	right: 0px;
 }
 .dropbtn {
   background-color: #4CAF50;
@@ -15,8 +63,10 @@
 .dropdown {
   position: relative;
   display: inline-block;
-	width : 50%;
+  width : 50%;
 }
+
+
 
 .topic-options {
 	display: inline-block;
@@ -40,11 +90,15 @@
   position: absolute;
   background-color: #f1f1f1;
   min-width: 160px;
-	width:100%;
+  width:100%;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
+#color-filter-menu.dropdown-content {
+	min-width:10px;
+	width: 10px;
+}
 .dropdown-item, .option-add-topic {
   padding: 12px 16px;
   text-decoration: none;
@@ -132,3 +186,6 @@ body{
 	cursor: pointer;
 }	
 
+.filters > div:hover {
+	background-color: rgba(255, 255, 255, 0.1);
+}
